--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
       "request" : "2.27.0",
       "js-base64" : "2.1.2",
       "iconv-lite" : "0.2.11",
-      "archiver" : "0.4.9"
+      "archiver" : "0.4.9",
+      "adm-zip" : "0.4.3"
   },
   "devDependencies": {},
   "scripts": {
