【feature】 增加publish的时候，对ignore文件的支持，添加文件过滤

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "iconv-lite": "0.2.11",
     "archiver": "0.4.9",
     "adm-zip": "0.4.3",
-    "async": "0.2.9"
+    "async": "0.2.9",
+	"ignore":"2.2.7"
   },
   "devDependencies": {},
   "scripts": {
