--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "adm-zip": "0.4.3",
     "async": "0.2.9",
 	  "ignore":"2.2.7",
-    "form-data": "~0.1.0"
+    "form-data": "~0.1.0",
+    "init-package-json": "0.0.15"
   },
   "devDependencies": {},
   "scripts": {
